# src/http/api/episodes.rs
@@ -1,12 +1,14 @@
 use axum::{
     extract::{Path, State},
-    http::StatusCode,
     routing::post,
     Json, Router,
 };
 use serde::Deserialize;
 
-use crate::http::{auth::ApiUser, errors::JsonAppError, AppState};
+use crate::{
+    http::{auth::ApiUser, errors::JsonAppError, AppState},
+    model::ProgressState,
+};
 
 pub fn router() -> Router<AppState> {
     Router::new().route("/:id/progress", post(report_progress))
@@ -23,10 +25,10 @@ async fn report_progress(
     State(state): State<AppState>,
     Path(episode_id): Path<String>,
     Json(report): Json<ProgressReport>,
-) -> Result<StatusCode, JsonAppError> {
-    state
+) -> Result<Json<ProgressState>, JsonAppError> {
+    let progress = state
         .app
         .update_episode_progress(&user.username, &episode_id, report.progress, report.done)
         .await?;
-    Ok(StatusCode::OK)
+    Ok(Json(progress))
 }
